--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
+    "pg": "^8.11.3"
   }
 }
