updated some code in the app files and created docker file for frontend successfully

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,8 @@ jspm_packages/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
+build/
+
 # TypeScript cache
 *.tsbuildinfo
 
