--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.1.1",
     "pino": "^8.19.0",
     "pino-http": "^9.0.0",
+    "prom-client": "^15.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
